7/25/12 fix color of correct answer line, as shown by point tool
7/25/12 make game graph interactive only when in "Check" state
7/25/12 add 2 point tools to "Graph the Line" challenge
7/25/12 change PointTool to use a single list of lines, so it can be reused in the game
7/24/12 on "Show Answer", set color of equation to be same as the correct line
7/24/12 clean up challenge and state initialization for game
7/24/12 complete game-play cycle for one type of challenge
7/24/12 mess around with colors for given, guess and correct answer
7/24/12 move game constants to GameConstants
7/24/12 first challenge: add manipulators, display points
7/24/12 partial first-pass at first challenge, no interactivity, brute-force implementation to investigate issues and architecture
7/24/12 update game-model fields before notifying observers that game phase has changed
7/24/12 simplify identification of objects that describe the same line, delete problematic override of equals
7/24/12 move highlight color out of line model and into view, since it is applicable to saved lines only
7/24/12 replace odd mutation constructor with "with" method in StraightLine
7/24/12 fix initial position of slope-intercept manipulators, broken in [66153] by overriding StraightLine.equals
7/23/12 rudimentary challenge added to game model
7/23/12 simplify a line only if its rise and run are who numbers
7/23/12 modify *EquationFactory interfaces so that equation simplification is optional
7/23/12 move responsibility for equation simplification into the model
7/23/12 rename nodes for interactive equations
# 0.00.21 (65997) Jul 18, 2012
7/18/12 tweak game reward parameters
7/18/12 add images of simplified equations to game reward
7/18/12 flatten PointToolNode hierarchy
7/18/12 make PointToolNode responsible for generation of game reward images
7/18/12 add point coordinates to point tools in the game reward
# 0.00.20 (65976) Jul 18, 2012
7/18/12 dev version to demonstrate top-level flow of game and reward